--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
   <meta charset="utf-8">
   <title> Best Chocolate Chip Cookies </title>
+</head>
 <body>
-
   <h1>Best Chocolate Chip Cookies
-    <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" /></h1>
-  </head>
-  <p> This recipe is from my dad and they are a favorite among friends and family.
-    The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate! </p>
-  <!-- Add in section about history of cookies? <h3> History of cookies </h3> <p>Most people don't know the complicated past of the cookie. FINISH -->
+    <img src="http://lorempixel.com/400/200/" alt="An image of a cookie"/>
+  </h1>
+  <p> 
+    This recipe is from my dad and they are a favorite among friends and family.
+    The secret ingredient is the coconut! <em>Be warned</em>, these will fly off of the plate! 
+  </p>
+  <h3> History of cookies </h3> 
+  <p>Most people don't know the complicated past of the cookie.
+    Cookies appear to have their origins in 7th century AD Persia, 
+    shortly after the use of sugar became relatively common in the region. 
+    They spread to Europe through the Muslim conquest of Spain. 
+    By the 14th century, they were common in all levels of society throughout Europe, 
+    from royal cuisine to street vendors.
+  </p>
   <h2>Ingredients</h2>
 
   <ul>
     <li> Butter</li>
     <li> White sugar</li>
-    <li> Brown sugar
-    <li> Eggs
+    <li> Brown sugar</li>
+    <li> Eggs</li>
     <li> Vanilla</li>
     <li> Flour</li>
     <li> Baking soda</li>
